251222-打包diagram-js-operator插件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,15 @@
     "lib": ["ES2020", "DOM"],
     // "declaration": true,
     // "declarationDir": "types",
-    "outDir": "dist",
+    // 有rollup控制输出
+    // "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "noEmit": true
   },
   "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules", "dist"]
