--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "demo": "vite ./demo",
-    "build": "rollup -c",
+    "build": "rollup -c && sass src/index.scss dist/diagram-js-operator.css --style=compressed",
     "dev": "rollup -c -w",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
@@ -29,18 +29,23 @@
     "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
+    "bpmn-js": "^18.9.1",
     "diagram-js": "*",
+    "diagram-js-minimap": "^5.2.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.4",
     "rollup": "^4.54.0",
     "rollup-plugin-dts": "^6.3.0",
+    "sass": "^1.97.1",
     "typescript": "^5.9.3",
     "vite": "^4.5.0"
   },
   "peerDependencies": {
-    "diagram-js": "^15.4.0"
+    "bpmn-js": "^18.9.1",
+    "diagram-js": "^15.4.0",
+    "diagram-js-minimap": "^5.2.0"
   },
   "dependencies": {
     "min-dom": "^5.1.2",
